cabal-version: 2.4
name:          mealy
version:       0.1.0
license:       BSD-3-Clause
copyright:     Tony Day (c) AfterTimes
maintainer:    tonyday567@gmail.com
author:        Tony Day
homepage:      https://github.com/tonyday567/mealy#readme
bug-reports:   https://github.com/tonyday567/mealy/issues
synopsis:      See readme.md
description:   See readme.md for description.
category:      project
build-type:    Simple
tested-with:   GHC ==8.8.4 || ==8.10.4 || ==9.0.1 || ==9.2.0.20210821

source-repository head
  type:     git
  location: https://github.com/tonyday567/mealy

library
  exposed-modules:
    Data.Mealy
    Data.Mealy.Quantiles
    Data.Mealy.Simulate

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie -Wunused-packages

  build-depends:
    , adjunctions        ^>=4.4
    , base               >=4.14.1 && <5
    , containers         ^>=0.6.2
    , folds              ^>=0.7.6
    , generic-lens       ^>=2.2.0
    , lens               ^>=5.0.1
    , matrix             ^>=0.3.6
    , mwc-probability    ^>=2.3.1
    , numhask            ^>=0.8.1
    , numhask-array      ^>=0.9.1
    , primitive          ^>=0.7.2
    , profunctors        ^>=5.6.2
    , tdigest            ^>=0.2.1
    , text               ^>=1.2.4
    , vector             ^>=0.12.3
    , vector-algorithms  ^>=0.8.0
